# vicious

./: .dockerignore  .gitignore  .prettierignore  .prettierrc.json  README.md  activate.fish  package.json  pnpm-lock.yaml  turbo.json
.github/workflows/: release.yml
apps/: imgui.ini
apps/animation/: CMakeLists.txt  package.json
apps/animation/src/: anm2gltf.c
apps/audio/: CMakeLists.txt  README.md  package.json
apps/audio/src/: mus2wav.c  snd2wav.c  wav2mus.c  wav2snd.c  wav2xbox.c
apps/cli/: package.json  rollup.config.ts
apps/cli/src/: convert.ts
apps/debugger/: main.py  package.json  pyproject.toml
apps/doc/: .gitignore  Doxyfile  README.md  package.json
apps/doc/codegen/: doc.ts  main.ts
apps/edit/: CMakeLists.txt  README.md  package.json
apps/edit/src/: edit.c  edit.html
apps/json/: CMakeLists.txt  package.json
apps/json/src/: json2vcs.c  vcs2json.c  vcs2json.html
apps/material/: .gitignore  CMakeLists.txt  README.md  package.json
apps/material/src/: ms2gltf.c  mtl2gltf.c
apps/mesh/: .gitignore  CMakeLists.txt  README.md  package.json
apps/mesh/src/: msh2gltf.c
apps/pack/: CMakeLists.txt  README.md  package.json
apps/pack/src/: pack.c  pack.html  unpack.c  unpack.html
apps/pak/: CMakeLists.txt  README.md  package.json
apps/pak/src/: pakdump.c  pakdump.html
apps/test-c/: CMakeLists.txt  package.json
apps/test-c/src/: test.c
apps/test-js/: package.json
apps/test-js/src/: test.ts
apps/texture/: CMakeLists.txt  README.md  package.json
apps/texture/src/: dds.h  dds2txr.c  tga.h  txr2dds.c  txr2image.c  txr2png.c
