#----------------------------------------------------------------------------------
# Project
#----------------------------------------------------------------------------------

cmake_minimum_required(VERSION 3.10..4.2)
project(ViciousTexture)

#----------------------------------------------------------------------------------
# Options
#----------------------------------------------------------------------------------

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

#----------------------------------------------------------------------------------
# Dependencies
#----------------------------------------------------------------------------------

add_subdirectory(node_modules/@repo/c)

#----------------------------------------------------------------------------------
# Executables
#----------------------------------------------------------------------------------

add_executable(txr2dds
    src/txr2dds.c
)

target_link_libraries(txr2dds
    vicious
)

add_executable(dds2txr
    src/dds2txr.c
)

target_link_libraries(dds2txr
    vicious
)
